--- a/analysis/subbredit_freq.ipynb
+++ b/analysis/subbredit_freq.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,12 @@
     "        subs_per_day_count = subs_per_day.shape[0]\n",
     "        posts_per_day[\"count\"].append(subs_per_day_count)\n",
     "        posts_per_day[\"day\"].append(i)\n",
-    "        posts_per_day[\"subreddit\"].append(i)"
+    "        posts_per_day[\"subreddit\"].append(sub)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -131,31 +131,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-07-11</td>\n",
-       "      <td>2020-07-11</td>\n",
+       "      <td>skeptic</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2020-07-10</td>\n",
-       "      <td>2020-07-10</td>\n",
+       "      <td>skeptic</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2020-07-09</td>\n",
-       "      <td>2020-07-09</td>\n",
+       "      <td>skeptic</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2020-06-30</td>\n",
-       "      <td>2020-06-30</td>\n",
+       "      <td>skeptic</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2020-07-05</td>\n",
-       "      <td>2020-07-05</td>\n",
+       "      <td>skeptic</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -167,31 +167,31 @@
        "    <tr>\n",
        "      <th>6278</th>\n",
        "      <td>2020-03-20</td>\n",
-       "      <td>2020-03-20</td>\n",
+       "      <td>u_presidencyunivblr</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6279</th>\n",
        "      <td>2020-03-19</td>\n",
-       "      <td>2020-03-19</td>\n",
+       "      <td>u_presidencyunivblr</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6280</th>\n",
        "      <td>2020-03-18</td>\n",
-       "      <td>2020-03-18</td>\n",
+       "      <td>u_presidencyunivblr</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6281</th>\n",
        "      <td>2020-03-17</td>\n",
-       "      <td>2020-03-17</td>\n",
+       "      <td>u_presidencyunivblr</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6282</th>\n",
        "      <td>2020-06-23</td>\n",
-       "      <td>2020-06-23</td>\n",
+       "      <td>u_Zealousideal_Visual5</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -200,23 +200,23 @@
        "</div>"
       ],
       "text/plain": [
-       "             day   subreddit  count\n",
-       "0     2020-07-11  2020-07-11     12\n",
-       "1     2020-07-10  2020-07-10     10\n",
-       "2     2020-07-09  2020-07-09     16\n",
-       "3     2020-06-30  2020-06-30     10\n",
-       "4     2020-07-05  2020-07-05      6\n",
-       "...          ...         ...    ...\n",
-       "6278  2020-03-20  2020-03-20      3\n",
-       "6279  2020-03-19  2020-03-19      1\n",
-       "6280  2020-03-18  2020-03-18      1\n",
-       "6281  2020-03-17  2020-03-17      2\n",
-       "6282  2020-06-23  2020-06-23      1\n",
+       "             day               subreddit  count\n",
+       "0     2020-07-11                 skeptic     12\n",
+       "1     2020-07-10                 skeptic     10\n",
+       "2     2020-07-09                 skeptic     16\n",
+       "3     2020-06-30                 skeptic     10\n",
+       "4     2020-07-05                 skeptic      6\n",
+       "...          ...                     ...    ...\n",
+       "6278  2020-03-20     u_presidencyunivblr      3\n",
+       "6279  2020-03-19     u_presidencyunivblr      1\n",
+       "6280  2020-03-18     u_presidencyunivblr      1\n",
+       "6281  2020-03-17     u_presidencyunivblr      2\n",
+       "6282  2020-06-23  u_Zealousideal_Visual5      1\n",
        "\n",
        "[6283 rows x 3 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
