Add pytrends examples

--- a/analysis/PSAW_search.ipynb
+++ b/analysis/PSAW_search.ipynb
@@ -1456,7 +1456,7 @@
     }
    ],
    "source": [
-    "fig = px.line(comments_counts, x=\"key\", y=\"doc_count\", title=\"Search term comment-frequency over time\", labels = {\"key\":\"Date\", \"doc_count\": \"Frequency\"})\n",
+    "fig = px.line(comments_counts, x=\"key\", y=\"doc_count\", title=\"Search term comment-frequency over time: \" + query, labels = {\"key\":\"Date\", \"doc_count\": \"Frequency\"})\n",
     "fig.show()"
    ]
   },
