Finish redditcollector implementation

--- a/analysis/PSAW_text_query.ipynb
+++ b/analysis/PSAW_text_query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,14 +49,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['all_awardings', 'allow_live_comments', 'author',\n",
+       "       'author_flair_css_class', 'author_flair_richtext', 'author_flair_text',\n",
+       "       'author_flair_type', 'author_fullname', 'author_patreon_flair',\n",
+       "       'author_premium', 'awarders', 'can_mod_post', 'content_categories',\n",
+       "       'contest_mode', 'created_utc', 'domain', 'full_link', 'gildings', 'id',\n",
+       "       'is_crosspostable', 'is_meta', 'is_original_content',\n",
+       "       'is_reddit_media_domain', 'is_robot_indexable', 'is_self', 'is_video',\n",
+       "       'link_flair_background_color', 'link_flair_css_class',\n",
+       "       'link_flair_richtext', 'link_flair_template_id', 'link_flair_text',\n",
+       "       'link_flair_text_color', 'link_flair_type', 'locked', 'media_only',\n",
+       "       'no_follow', 'num_comments', 'num_crossposts', 'over_18',\n",
+       "       'parent_whitelist_status', 'permalink', 'pinned', 'post_hint',\n",
+       "       'preview', 'pwls', 'removed_by_category', 'retrieved_on', 'score',\n",
+       "       'selftext', 'send_replies', 'spoiler', 'stickied', 'subreddit',\n",
+       "       'subreddit_id', 'subreddit_subscribers', 'subreddit_type', 'thumbnail',\n",
+       "       'thumbnail_height', 'thumbnail_width', 'title', 'total_awards_received',\n",
+       "       'treatment_tags', 'upvote_ratio', 'url', 'url_overridden_by_dest',\n",
+       "       'whitelist_status', 'wls', 'created', 'suggested_sort', 'media',\n",
+       "       'media_embed', 'secure_media', 'secure_media_embed',\n",
+       "       'author_flair_background_color', 'author_flair_template_id',\n",
+       "       'author_flair_text_color', 'discussion_type', 'event_end',\n",
+       "       'event_is_live', 'event_start', 'crosspost_parent',\n",
+       "       'crosspost_parent_list', 'poll_data', 'distinguished', 'media_metadata',\n",
+       "       'banned_by', 'gallery_data', 'is_gallery', 'author_cakeday',\n",
+       "       'rpan_video', 'edited', 'gilded', 'collections'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submissions.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1598918400"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "int(dt.datetime.strptime(\"2020/9/1\", \"%Y/%m/%d\").timestamp())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/psaw/PushshiftAPI.py:192: UserWarning: Got non 200 code 429\n",
+      "  warnings.warn(\"Got non 200 code %s\" % response.status_code)\n",
+      "/opt/conda/lib/python3.7/site-packages/psaw/PushshiftAPI.py:180: UserWarning: Unable to connect to pushshift.io. Retrying after backoff.\n",
+      "  warnings.warn(\"Unable to connect to pushshift.io. Retrying after backoff.\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4623\n"
+      "46721\n"
      ]
     }
    ],
@@ -62,6 +145,24 @@
     "\n",
     "comments = pd.DataFrame([thing.d_ for thing in gen])\n",
     "print(len(comments))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-0914c07705ff>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-0914c07705ff>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    comments.columns[comm in submissions.columns for comm in comments.columns]\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments.columns"
    ]
   },
   {
