--- a/analysis/redditcollector_example.ipynb
+++ b/analysis/redditcollector_example.ipynb
@@ -6,7 +6,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from redditcollector import RedditCollector"
+    "from redditcollector import RedditCollector\n",
+    "import pandas as pd\n",
+    "import pandas_gbq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collector = RedditCollector(r\"../redditcollector_disinfo_config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_subreddits = list(set(['Coronavirus', 'insanepeoplefacebook', 'newsbotbot', 'worldnews', 'conspiracywhatever', 'AskReddit', 'conspiracytheories', 'memes', 'news', 'conspiracy_commons', 'AutoNewspaper', 'teenagers', 'ConspiracyHeadlines', 'technology', 'copypasta', 'unitedkingdom', 'tradeflags', 'OutOfTheLoop', 'nottheonion', 'removalbot', 'unpopularopinion', 'China_Flu', 'JAAGNet', 'businesstalkdaily', 'ukpolitics', 'NoStupidQuestions', 'Showerthoughts', 'unremovable', 'dangerous_tech', 'videos', 'wallstreetbets', 'rant', 'TheNewsFeed', 'Wuhan_Flu', 'skeptic', 'discordservers', 'technews', 'dankmemes', 'INDEPENDENTauto', 'CoronavirusUK', 'FreeKarma4U', 'TrueOffMyChest', 'facepalm', 'CoronavirusFOS', 'BannedDotVideo', 'europe', 'explainlikeimfive', 'TooAfraidToAsk', 'FreeKarma4You', 'conspiracy', 'insanepeoplefacebook', 'AskReddit', 'teenagers', 'copypasta', 'conspiracy_commons', 'Coronavirus', 'conspiracytheories', 'memes', 'relationship_advice', 'Showerthoughts', 'JAAGNet', 'tradeflags', 'OutOfTheLoop', 'NoStupidQuestions', 'pennystocks', 'Advice', 'conspiracywhatever', 'removalbot', 'unpopularopinion', 'technology', 'wallstreetbets', 'TrueOffMyChest', 'explainlikeimfive', 'worldnews', 'rant', 'DebateRightists', 'SAtechnews', 'AutoNewspaper', 'investing', 'Romania', 'niuz', 'CoronavirusUK', 'news', 'QAnonCasualties', 'stocks', 'funny', 'skeptic', 'China_Flu', 'newsbotbot', 'facepalm', 'askscience', 'ConspiracyHeadlines', 'u_snehawiseguy', 'TooAfraidToAsk', 'newzealand', 'Wuhan_Flu', 'videos', 'CovIdiots', 'relationships', 'conspiracy', 'unitedkingdom', 'conspiracywhatever', 'AutoNewspaper', 'worldnews', 'news', 'ConspiracyHeadlines', 'uknews', 'whatisthisthing', 'Ilford', 'Coronavirus', 'badunitedkingdom', 'crimenews', 'Jokes', 'CoronavirusUK', 'unremovable', 'CasualUK', 'ukpolitics', 'BBCtech', 'JAAGNet', 'BBCauto', 'FreeKarma4You', 'INDEPENDENTauto', 'bprogramming', 'insanepeoplefacebook', 'UKNewsByABot', 'conspiracy_commons', 'Scotland', 'AskScienceDiscussion', 'britishproblems', 'biology', 'NoFilterNews', 'europe', 'HomeNetworking', 'businesstalkdaily', 'TheNewsFeed', 'GlobalNews', 'TrueOffMyChest', 'technology', 'u_jerryfranksonJF', 'myfriendwantstoknow', 'offbeat', 'Feedimo', 'JustBadNews', 'CellBoosters', 'Economics', 'belgium', 'glasgow', 'GUARDIANauto', 'CovIdiots']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:02,  2.22s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query uuid logged: abfe0444-0d8d-416e-ad69-5c0af4a165f8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:01,  1.12s/it]\n",
+      "1it [00:01,  1.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query completed successfully, returning uuid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_uuid = collector.collect_submissions(\n",
+    "    query=None,\n",
+    "    start_date=\"2020/09/07\",\n",
+    "    end_date=\"2020/09/08\",\n",
+    "    subreddits=\"CovIdiots\"\n",
+    ")"
    ]
   },
   {
@@ -15,66 +86,161 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  all_awardings associated_award            author  \\\n",
-      "0            []             None         Isaiahall   \n",
-      "1            []             None         BlackOrre   \n",
-      "2            []             None      Tehlaserw0lf   \n",
-      "3            []             None           Serenyx   \n",
-      "4            []             None  grandmas_noodles   \n",
-      "\n",
-      "  author_flair_background_color author_flair_css_class author_flair_richtext  \\\n",
-      "0                          None                   None                    []   \n",
-      "1                          None                   None                    []   \n",
-      "2                          None                   None                    []   \n",
-      "3                          None                   None                    []   \n",
-      "4                          None                   None                    []   \n",
-      "\n",
-      "  author_flair_template_id author_flair_text author_flair_text_color  \\\n",
-      "0                     None              None                    None   \n",
-      "1                     None              None                    None   \n",
-      "2                     None              None                    None   \n",
-      "3                     None              None                    None   \n",
-      "4                     None              None                    None   \n",
-      "\n",
-      "  author_flair_type  ... score  send_replies  stickied          subreddit  \\\n",
-      "0              text  ...     1          True     False     Showerthoughts   \n",
-      "1              text  ...     3          True     False           Teachers   \n",
-      "2              text  ...     1          True     False           Portland   \n",
-      "3              text  ...     1          True     False          AskReddit   \n",
-      "4              text  ...     0          True     False  interestingasfuck   \n",
-      "\n",
-      "  subreddit_id top_awarded_type  total_awards_received treatment_tags  \\\n",
-      "0     t5_2szyo             None                      0             []   \n",
-      "1     t5_2qqcs             None                      0             []   \n",
-      "2     t5_2qi2i             None                      0             []   \n",
-      "3     t5_2qh1i             None                      0             []   \n",
-      "4     t5_2qhsa             None                      0             []   \n",
-      "\n",
-      "        created        edited  \n",
-      "0  1.599516e+09           NaN  \n",
-      "1  1.599513e+09           NaN  \n",
-      "2  1.599509e+09  1.599509e+09  \n",
-      "3  1.599505e+09           NaN  \n",
-      "4  1.599504e+09           NaN  \n",
-      "\n",
-      "[5 rows x 36 columns]\n"
+      "Downloading: 100%|██████████| 1/1 [00:00<00:00,  8.73rows/s]\n"
      ]
     }
    ],
    "source": [
-    "collector = RedditCollector(r\"../redditcollector_example_config.yaml\")\n",
-    "\n",
-    "submissions = collector.collect_submissions(\n",
-    "    query=\"5G coronavirus\",\n",
-    "    start_date=\"2020/09/07\",\n",
-    "    end_date=\"2020/09/08\",\n",
-    "    write_to_gbq=False\n",
-    ")\n",
-    "print(submissions.head())"
+    "sql = \"\"\"\n",
+    "SELECT *\n",
+    "FROM `covid19.redditcollector_logging`\n",
+    "\"\"\"\n",
+    "logged_queries = collector.query_gbq(sql)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>query</th>\n",
+       "      <th>subreddits</th>\n",
+       "      <th>query_datetime</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>abfe0444-0d8d-416e-ad69-5c0af4a165f8</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[\"CovIdiots\"]</td>\n",
+       "      <td>2020-09-15 16:34:26.076987+00:00</td>\n",
+       "      <td>2020-09-07 00:00:00+00:00</td>\n",
+       "      <td>2020-09-08 00:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   uuid query     subreddits  \\\n",
+       "0  abfe0444-0d8d-416e-ad69-5c0af4a165f8  None  [\"CovIdiots\"]   \n",
+       "\n",
+       "                    query_datetime                start_date  \\\n",
+       "0 2020-09-15 16:34:26.076987+00:00 2020-09-07 00:00:00+00:00   \n",
+       "\n",
+       "                   end_date  \n",
+       "0 2020-09-08 00:00:00+00:00  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logged_queries.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Querying from the database\n",
+    "\n",
+    "Use SQL, as with pandas_gbq.\n",
+    "Should be careful to only select one uuid, else data will be too large."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 12856/12856 [00:06<00:00, 1895.09rows/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "SELECT *\n",
+    "FROM `covid19.redditcollector_submissions`\n",
+    "WHERE uuid=\"3a9e63da-05b0-4c9e-8c4d-dbbc63c69cc4\"\n",
+    "\"\"\"\n",
+    "submissions = collector.query_gbq(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12856, 74)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submissions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
