Fix collect top subreddits

--- a/analysis/redditcollector_example.ipynb
+++ b/analysis/redditcollector_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,65 +31,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:02,  2.22s/it]\n"
+      "1it [00:03,  3.09s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query uuid logged: abfe0444-0d8d-416e-ad69-5c0af4a165f8\n"
+      "Query uuid logged: d60d3733-e150-4751-92eb-d03683b0261e\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:01,  1.12s/it]\n",
-      "1it [00:01,  1.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query completed successfully, returning uuid\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "1it [00:01,  1.62s/it]\n",
+      "1it [00:02,  2.03s/it]\n",
+      "1it [00:04,  4.45s/it]\n",
+      "1it [00:03,  3.94s/it]\n",
+      "1it [00:02,  2.05s/it]\n",
+      "0it [00:00, ?it/s]"
      ]
     }
    ],
    "source": [
     "query_uuid = collector.collect_submissions(\n",
     "    query=None,\n",
-    "    start_date=\"2020/09/07\",\n",
-    "    end_date=\"2020/09/08\",\n",
-    "    subreddits=\"CovIdiots\"\n",
+    "    start_date=\"2020/01/01\",\n",
+    "    end_date=\"2020/09/15\",\n",
+    "    subreddits=top_subreddits\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 1/1 [00:00<00:00,  8.73rows/s]\n"
+      "Downloading: 100%|██████████| 8/8 [00:00<00:00, 47.88rows/s]\n"
      ]
     }
    ],
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -138,29 +128,84 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>abfe0444-0d8d-416e-ad69-5c0af4a165f8</td>\n",
+       "      <td>57db734b-cd19-48e4-9afa-d3a737463481</td>\n",
        "      <td>None</td>\n",
-       "      <td>[\"CovIdiots\"]</td>\n",
-       "      <td>2020-09-15 16:34:26.076987+00:00</td>\n",
-       "      <td>2020-09-07 00:00:00+00:00</td>\n",
-       "      <td>2020-09-08 00:00:00+00:00</td>\n",
+       "      <td>[\"AskReddit\", \"stocks\", \"conspiracytheories\", ...</td>\n",
+       "      <td>2020-09-16 15:26:54.709368+00:00</td>\n",
+       "      <td>2020-01-01 00:00:00+00:00</td>\n",
+       "      <td>2020-09-15 00:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>85d20e39-ef43-41ab-8b59-8b74e09e0b9f</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[\"teenagers\", \"videos\", \"Coronavirus\", \"GUARDI...</td>\n",
+       "      <td>2020-09-16 14:16:27.681825+00:00</td>\n",
+       "      <td>2020-01-01 00:00:00+00:00</td>\n",
+       "      <td>2020-09-15 00:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bdaa892e-74dd-49d5-b32b-52351b406443</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[\"biology\", \"Feedimo\", \"Scotland\", \"technology...</td>\n",
+       "      <td>2020-09-16 15:26:35.830688+00:00</td>\n",
+       "      <td>2020-01-01 00:00:00+00:00</td>\n",
+       "      <td>2020-09-15 00:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c102422c-c5eb-475b-8cc3-e6f5e3acbdc8</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[\"conspiracytheories\", \"funny\", \"businesstalkd...</td>\n",
+       "      <td>2020-09-16 15:25:36.634365+00:00</td>\n",
+       "      <td>2020-01-01 00:00:00+00:00</td>\n",
+       "      <td>2020-09-15 00:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>700a0855-0027-4d42-bcb5-4b301773424f</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[\"nottheonion\", \"investing\", \"TrueOffMyChest\",...</td>\n",
+       "      <td>2020-09-16 15:29:07.296664+00:00</td>\n",
+       "      <td>2020-01-01 00:00:00+00:00</td>\n",
+       "      <td>2020-09-15 00:00:00+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   uuid query     subreddits  \\\n",
-       "0  abfe0444-0d8d-416e-ad69-5c0af4a165f8  None  [\"CovIdiots\"]   \n",
+       "                                   uuid query  \\\n",
+       "0  57db734b-cd19-48e4-9afa-d3a737463481  None   \n",
+       "1  85d20e39-ef43-41ab-8b59-8b74e09e0b9f  None   \n",
+       "2  bdaa892e-74dd-49d5-b32b-52351b406443  None   \n",
+       "3  c102422c-c5eb-475b-8cc3-e6f5e3acbdc8  None   \n",
+       "4  700a0855-0027-4d42-bcb5-4b301773424f  None   \n",
+       "\n",
+       "                                          subreddits  \\\n",
+       "0  [\"AskReddit\", \"stocks\", \"conspiracytheories\", ...   \n",
+       "1  [\"teenagers\", \"videos\", \"Coronavirus\", \"GUARDI...   \n",
+       "2  [\"biology\", \"Feedimo\", \"Scotland\", \"technology...   \n",
+       "3  [\"conspiracytheories\", \"funny\", \"businesstalkd...   \n",
+       "4  [\"nottheonion\", \"investing\", \"TrueOffMyChest\",...   \n",
        "\n",
        "                    query_datetime                start_date  \\\n",
-       "0 2020-09-15 16:34:26.076987+00:00 2020-09-07 00:00:00+00:00   \n",
+       "0 2020-09-16 15:26:54.709368+00:00 2020-01-01 00:00:00+00:00   \n",
+       "1 2020-09-16 14:16:27.681825+00:00 2020-01-01 00:00:00+00:00   \n",
+       "2 2020-09-16 15:26:35.830688+00:00 2020-01-01 00:00:00+00:00   \n",
+       "3 2020-09-16 15:25:36.634365+00:00 2020-01-01 00:00:00+00:00   \n",
+       "4 2020-09-16 15:29:07.296664+00:00 2020-01-01 00:00:00+00:00   \n",
        "\n",
        "                   end_date  \n",
-       "0 2020-09-08 00:00:00+00:00  "
+       "0 2020-09-15 00:00:00+00:00  \n",
+       "1 2020-09-15 00:00:00+00:00  \n",
+       "2 2020-09-15 00:00:00+00:00  \n",
+       "3 2020-09-15 00:00:00+00:00  \n",
+       "4 2020-09-15 00:00:00+00:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 12856/12856 [00:06<00:00, 1895.09rows/s]\n"
+      "Downloading: 100%|██████████| 1794/1794 [00:01<00:00, 1561.93rows/s]\n"
      ]
     }
    ],
@@ -196,23 +241,23 @@
     "sql = \"\"\"\n",
     "SELECT *\n",
     "FROM `covid19.redditcollector_submissions`\n",
-    "WHERE uuid=\"3a9e63da-05b0-4c9e-8c4d-dbbc63c69cc4\"\n",
+    "WHERE uuid = '700a0855-0027-4d42-bcb5-4b301773424f'\n",
     "\"\"\"\n",
     "submissions = collector.query_gbq(sql)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12856, 74)"
+       "(1794, 75)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,10 +268,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['uuid', 'all_awardings', 'allow_live_comments', 'author',\n",
+       "       'author_flair_css_class', 'author_flair_richtext', 'author_flair_text',\n",
+       "       'author_flair_type', 'author_fullname', 'author_patreon_flair',\n",
+       "       'author_premium', 'awarders', 'can_mod_post', 'contest_mode', 'created',\n",
+       "       'created_utc', 'crosspost_parent', 'crosspost_parent_list',\n",
+       "       'distinguished', 'domain', 'full_link', 'gildings', 'id',\n",
+       "       'is_crosspostable', 'is_meta', 'is_original_content',\n",
+       "       'is_reddit_media_domain', 'is_robot_indexable', 'is_self', 'is_video',\n",
+       "       'link_flair_background_color', 'link_flair_richtext',\n",
+       "       'link_flair_template_id', 'link_flair_text', 'link_flair_text_color',\n",
+       "       'link_flair_type', 'locked', 'media', 'media_embed', 'media_only',\n",
+       "       'no_follow', 'num_comments', 'num_crossposts', 'over_18',\n",
+       "       'parent_whitelist_status', 'permalink', 'pinned', 'post_hint',\n",
+       "       'preview', 'pwls', 'removed_by_category', 'retrieved_on', 'score',\n",
+       "       'secure_media', 'secure_media_embed', 'selftext', 'send_replies',\n",
+       "       'spoiler', 'stickied', 'subreddit', 'subreddit_id',\n",
+       "       'subreddit_subscribers', 'subreddit_type', 'suggested_sort',\n",
+       "       'thumbnail', 'thumbnail_height', 'thumbnail_width', 'title',\n",
+       "       'total_awards_received', 'treatment_tags', 'upvote_ratio', 'url',\n",
+       "       'url_overridden_by_dest', 'whitelist_status', 'wls'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submissions.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['nottheonion'], dtype=object)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submissions.subreddit.unique()"
+   ]
   },
   {
    "cell_type": "code",
