fixed nlp bug in cleaning

--- a/analysis/clean_text.ipynb
+++ b/analysis/clean_text.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d9b0f813da3343979311b1d36127b1b0"
+       "model_id": "5401684572ad4c14839b6d5357c30b7f"
       }
      },
      "metadata": {}
@@ -177,8 +177,6 @@
     "\n",
     "def f(x):\n",
     "    print(f\"The percentage of words that appears more than {x} times are  { round(len(word_count_dataframe[word_count_dataframe.word_count > x]) / len(word_count_dataframe), 2) * 100 } \")\n",
-    "\n",
-    "\n",
     "\n",
     "# Generate a slider \n",
     "interact(f, x=widgets.IntSlider(step=1, value=1));\n"
@@ -282,9 +280,9 @@
     "                if predicate(item):\n",
     "                    yield item\n",
     "\n",
-    "    output_desired = list(filter_structure(lambda x: x not in to_delete, list_of_lists))\n",
+    "    list_of_lists_words_removed = list(filter_structure(lambda x: x not in to_delete, list_of_lists))\n",
     "\n",
-    "    return output_desired\n",
+    "    return list_of_lists_words_removed\n",
     "\n",
     "def list_of_list_elements(list_of_lists):\n",
     "    \n",
